--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -42,20 +42,6 @@
 	</div>
 
 	<script>
-		// Update username header in top right of page
-
-		async function updateUsername() {
-			const request = new XMLHttpRequest();
-			request.open('get', '/api/v1/user/details');
-			request.send();
-			request.onload = function() {
-				const userDetails = JSON.parse(request.responseText)['response'];
-				document.getElementById('top-title-bar-username').innerHTML = userDetails['username'];
-			}
-		}
-
-		updateUsername();
-
 		// Everything to do with tickets
 
 		async function getTickets() {
@@ -110,5 +96,6 @@
 
 		updateDashboard();
 	</script>
+	<script src="/assets/js/updateUsername.js"></script>
 </body>
 </html>
