--- a/src/pages/create-ticket.html
+++ b/src/pages/create-ticket.html
@@ -28,6 +28,7 @@
 			width: 200px;
 			float: left;
 			clear: left;
+			margin-top: 10px;
 		}
 
 		form input[type="text"], form textarea {
@@ -40,6 +41,7 @@
 			width: calc(100% - 30vw);
 			resize: none;
 			max-width: 500px;
+			margin-top: 10px;
 		}
 
 		form input[type="text"]:focus, form textarea:focus {
@@ -54,6 +56,7 @@
 			outline: 0;
 			font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
 			display: block;
+			margin-top: 10px;
 		}
 	</style>
 	</head>
