Redid fonts and some of the CSS, achieved a slightly cleaner look

--- a/src/pages/create-ticket.html
+++ b/src/pages/create-ticket.html
@@ -121,7 +121,7 @@
 
 			const request = new XMLHttpRequest();
 
-			request.open('post', '/api/v1/tickets/create');
+			request.open('post', '/api/tickets/create');
 
 			request.setRequestHeader('Content-Type', 'application/json');
 
